testsuite/tests/parser/should_fail/readFail003.stderr

readFail003.hs:4:27: error:
    • Couldn't match expected type ‘(a1, [a2], [a3])’
                  with actual type ‘a1’
      ‘a1’ is a rigid type variable bound by
        the inferred types of
          a :: a1
          b :: [a2]
          c :: [a3]
        at readFail003.hs:(4,1)-(8,26)
    • In the expression: a
      In a pattern binding:
        ~(a, b, c)
          | nullity b = a
          | nullity c = a
          | otherwise = a
          where
              nullity = null
    • Relevant bindings include
        a :: a1 (bound at readFail003.hs:4:3)
        b :: [a2] (bound at readFail003.hs:4:5)
        c :: [a3] (bound at readFail003.hs:4:7)
